# Workshop-2015-Boise

./: Ask Dan and Mike  Day1Summary  Loci.m2  README.md  getCoefficients  index.html  params.json  permutationSign.m2
CombinatorialGames/: CombinatorialGames.m2  gameRepresentation.m2
PHCpack/: Day1Summary  Day2Summary  Day4Update  Ex1Take2.m2  ExampleOutput  GetSimpleCoefficients  Monodromy.m2  PHCpack.m2  PresentationDay3  READ_ME  StrIdent.m2  StructuralIdentifiability.m2  cyclic7.m2  eq1e  eq1e.phc  equations.txt  ex1.m2  ex1track.m2  mes-playing.m2  one-to-one  strIdentPolysUpdate
PosChar/: Readme.txt
PowSer/: Egs.m2  FiltAlgScripts  FiltAlgScripts.m2  PowerSeries1.m2  Readme.txt  testEg1  testScritps1  testScritps1.m2
QuantumCohomology/: Demo-Dave.m2  OurMapleInterface-Corey.m2  OurMapleInterface-Dave.m2  OurMapleInterface.m2  PieriFirstSum.m2  PieriSecondSum.m2  PieriSums.m2  PolymakeInterface.m2  PossibleTableaux.m2  QCAlgebra.m2  QuantumCohomology.m2  QuantumCohomologyDoc.m2  RingfreeGiambelli.m2  TestOurProgramAgainstAnders.m2  lrcalc-1.2.tar  output.mpl  pieri-try.m2  schur-ring-bug.m2  sl3weights.m2  temp.mpl
QuantumCohomology/lrcalc-1.2/: AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  lrcalc.maple.src  testsuite
QuantumCohomology/lrcalc-1.2/src/: Makefile.am  Makefile.in  alloc.c  alloc.h  claim.h  hashtab.c  hashtab.h  lincomb.c  lincomb.h  list.c  list.h  lrcalc.c  maple.c  maple.h  salloc.c  schublib.c  schublib.h  schubmult.c  set.c  set.h  symfcn.c  symfcn.h  vectarg.c  vectarg.h  vector.c  vector.h
Splines/: #SplinesAuxilliaryFile.m2#  #examplesForSplines.m2#  .#SplinesAuxilliaryFile.m2  .#dualtests.m2  .#examplesForSplines.m2  .#examplesForSplinesGwyn.m2  .#generalizedSplines.m2  .#splineDimTests  (+23 more)
(+34 files in other folders)
